objects/LCRM_SSD_Links__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Clear_Usage_Analytics__c</fullName>
        <label>Clear Usage Analytics</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Order_Brief__c</fullName>
        <label>Client Order Brief</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FL_Insight_1__c</fullName>
        <description>need to provide link after {!Source_System_Detail__c.Source_System_Account_Number__c} in Mockup_Link_SSD</description>
        <label>FL Insight 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FL_Insight__c</fullName>
        <label>FL Insight</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FL_Performance_Console__c</fullName>
        <label>FL Performance Console</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FL_SAM_Portal__c</fullName>
        <label>FL SAM Portal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FindLaw_Resource_Center__c</fullName>
        <label>FindLaw Resource Center</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Small_Law_Account_Insights1__c</fullName>
        <label>Small Law Account Insights1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Small_Law_Account_Insights__c</fullName>
        <label>Small Law Account Insights</label>
        <type>Url</type>
    </fields>
    <label>LCRM SSD Links</label>
</CustomObject>